<resources>
    <string name="app_name">EmcashMerchant</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="manage_your_business_payment_easily">Manage your business payment easily</string>
    <string name="accept_payments_easily_and_instantly_with_emcash">Accept payments easily and instantly with EmCash</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="hello_merchant">Hello Merchant,</string>
    <string name="welcome_please_enter_the_following_n_details_to_login_to_your_account">Welcome, please enter the following  details to login to your account</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_desc"><![CDATA[OTP verification is only a one-time activity & further logins only require a PIN login.]]></string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_recieve_the_code">Didn\'t Recieve the code?</string>
    <string name="enter_pin_number">Enter PIN Number*</string>
    <string name="enter_pin_desc">Please enter your 6-digit PIN number to securely login to your account.</string>
    <string name="pin">PIN</string>
    <string name="ENTER_PIN">Enter PIN number*</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="security_ques_desc">Complete the security question to reset the password.</string>
    <string name="forget_pswd_enteremail_desc">Please enter your email address, an OTP will be sent to your address.</string>
    <string name="otm_email_desc">Please enter the OTP sent to your email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="newPassword">New Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="verify">Verify</string>
    <string name="confirm">Confirm</string>
    <string name="take_me_back_to_login">Take me back to login</string>
    <string name="password_reset_complete">Password reset complete</string>
    <string name="pswd_changed">Your password has been changed You can now log back in</string>
    <string name="emcash_balance">EmCash Balance</string>
    <string name="convert_to_cash">Convert to Cash</string>
    <string name="transfer_payment">Transfer Payment</string>
    <string name="recent">Recent</string>
    <string name="my_transaction_history">My Transaction History</string>
    <string name="new_payment_request">    New Payment Request</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="transaction_history">Transaction History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="basic_details">Basic Details</string>
    <string name="business_name">Business Name*</string>

    <string name="contact_person_name">Contact Person Name*</string>
    <string name="business_registered_name">Registered Name of Business*</string>
    <string name="trade_license_number">Trade License Number*</string>
    <string name="trade_license_authority">Trade License Issuing Authority*</string>
    <string name="service_description">Service Description</string>

    <string name="enter_basicdetails">Enter your basic details to get started.</string>

    <string name="enter_password_alphnumeric">The password will be an alphanumeric one with at least 8 characters (1 Uppercase, 1 lowercase, 1 symbol minimum)</string>


    <string name="email_id">Email ID*</string>
    <string name="phone_no">Phone No*</string>
    <string name="address">Address*</string>
    <string name="create_pin_number">Create Pin Number</string>
    <string name="create_password">Create Password</string>
    <string name="enter_password">Enter password</string>
    <string name="create_6_digit">Create a new 6-digit pin number  for your account</string>
    <string name="mobile_number_error">Please enter you mobile number</string>
    <string name="please_enter_otp">Please enter the OTP sent to your registered mobile number (406) 555-0120</string>
    <string name="didnt_recieve_the_code">Didn\'t Recieve the Code?</string>
    <string name="confirm_pin_number">Confirm PIN number*</string>
    <string name="next">Next</string>
    <string name="security_questions">Security Questions</string>
    <string name="please_answer_security_question">Please answer the following security questions to improve your payment security</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="your_answer_hint">Ans. Your answer goes here</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="head_uplaod_documents">Please upload these documents to finish up the sign up process.</string>
    <string name="head_reuplaod_documents">Please Reupload these documents to finish up the review process.</string>

    <string name="accepted_document_formats">Accepted document formats :</string>
    <string name="pdf_jpeg_or_png">PDF, JPEG or PNG.</string>
    <string name="max_file_size">Max file size per file:</string>
    <string name="_8mb">8mb</string>
    <string name="trade_licence_document">Trade Licence Document</string>
    <string name="commercial_reg_doc">Commercial Registration Document</string>
    <string name="reg_request_completed">Registration request submitted successfully. Your account is under review. Please wait while the process is done.</string>
    <string name="your_account_process">Your account is under process</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="enter_valid_otp">Please enter a valid OTP</string>
    <string name="otp_resend_msg">An OTP has been sent to your phone number</string>
    <string name="same_password_validation">Please enter same password</string>
    <string name="same_pin_number_validation">Please enter same Pin Number</string>
    <string name="select_different">Please select different question</string>
    <string name="please_answer_both_question">Please answer both question</string>
    <string name="upload_all_documents">Please upload all the documents</string>
    <string name="bank_doc_size">Bank Document size is above 8MB</string>
    <string name="commercial_doc_size">Commercial Registration Document size is above 8MB</string>
    <string name="trade_doc_size">Trade License Document size is above 8MB</string>
    <string name="no_question">No Question,s Found</string>
    <string name="min_length_password">Password should contain minimum 8 letters</string>
    <string name="special_char_password">Password should contain atleast 1 special character</string>
    <string name="uppercase_password">Password should contain atleast 1 uppercase character</string>
    <string name="lowercase_password">Password should contain atleast 1 lowercase character</string>
    <string name="numeric_character_password">Password should contain  atleast 1 numeric character</string>
    <string name="enter_valid_number">Please enter a valid mobile number</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_valid_pin">Please enter a valid pin number</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="enter_6_digit_pin_number">Please enter a valid pin number</string>
    <string name="valid_business_name">Please enter a valid business name</string>
    <string name="valid_contact_personname">Please enter a valid contact person name</string>
    <string name="valid_tradeliscencenumber">Please enter a valid trade license number</string>
    <string name="valid_trade_lic_auth">Please enter a valid trade license authority</string>
    <string name="my_activites">My Activites</string>
    <string name="load_emcash">Load Emcash</string>
    <string name="emcashbalance">EmCashBalance</string>
    <string name="valid_address">Please enter a valid Address</string>
    <string name="bankdoc_empty">\"Please Select Bank Document \"</string>
    <string name="commercial_doc_empty">\"Please Select a Commercial Registration Document \"</string>
    <string name="trade_lisc_doc_empty">\"Please Select a Trade License Document \"</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="please_select_any_question">Please select any question</string>
    <string name="profile_pic_updated">Profile Picture Updated</string>
    <string name="convert_emcash_to_cash">Convert EmCash to Cash</string>
    <string name="emcash">Emcash</string>
    <string name="enter_iban">Enter IBAN*</string>
    <string name="aed_equals_emcash">1 AED = 1 EmCash</string>
    <string name="convert">Convert</string>
    <string name="description">Description...</string>
    <string name="load_my_wallet">Load My Wallet</string>
    <string name="registered_name_of_business">Registered Name of Business*</string>
    <string name="registered_name_validaiton">Please enter a valid registered business name</string>
    <string name="enter_valid_amount">Please enter a valid amount</string>
    <string name="emcash_loaded">Emcash Loaded</string>
    <string name="iban">Please enter IBAN</string>
    <string name="bank_card">Bank Card</string>
    <string name="notification">Notifications</string>
    <string name="scan_qr_code">Scan QR code to pay</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="or">or</string>
    <string name="valid_qr">Please Scan a valid QR</string>
    <string name="emcash_pin">Emcash Pin</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_mobile_number_of_verified_user">Please enter the mobile number of the verified user</string>
    <string name="enter_number_hint">Enter phone number</string>
    <string name="payment_success">Payment Success</string>
    <string name="payment_inprogress">Payment In-progress</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_recieved">Payment Received</string>
    <string name="payment_converted">Payment Converted</string>
    <string name="scan_qr">[ ] Scan QR</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="view_all">View All</string>
    <string name="enough_bal">You Don\'t have enough balance</string>
    <string name="enter_Valid_pin">Please enter a valid Pin</string>
    <string name="enter_valid_pin_">Please enter a valid PIN</string>
    <string name="payment_rejected">Payment Rejected</string>
    <string name="pay_with_new_card">Pay with New Card</string>
    <string name="reupload_documents">ReUpload Documents</string>
    <string name="reupload_in_progress">Your Documents are sucessfully submitted. Your account is under review. Please wait while the process is done.</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="no_internet">No internet connection</string>

    <string-array name="security_question">
        <item>Select your Question</item>
        <item>In what town or city was your first full time","In what town or city was your first full time</item>
        <item>In what town or city was your first full time","In what town or city was your first full time</item>

    </string-array>

</resources>