<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.BasicDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_gradient"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_blue_gradient_bg" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp12"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp26"
                    android:padding="@dimen/dp12"
                    android:layout_marginTop="@dimen/dp64"
                    android:onClick="onClick"
                    android:src="@drawable/ic_back_arrow" />


                <TextView
                    android:id="@+id/tv_heading"
                    style="@style/HeadingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp26"
                    android:layout_marginTop="@dimen/dp30"
                    android:text="@string/basic_details"
                     />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/SubHeadingText"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp26"
                    android:layout_marginTop="@dimen/dp24"
                    android:text="@string/enter_basicdetails"
                    app:layout_constraintStart_toStartOf="@+id/tv_heading"
                    app:layout_constraintTop_toBottomOf="@+id/tv_heading" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_business_name"
                    style="@style/WhiteRoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:maxLength="50"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp60"
                    android:layout_marginEnd="@dimen/dp20"
                    android:hint="@string/business_name"

                    />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_contact_person_name"
                    style="@style/WhiteRoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp12"
                    android:maxLength="50"
                    android:layout_marginEnd="@dimen/dp20"
                    android:hint="@string/contact_person_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_reg_business_name"
                    style="@style/WhiteRoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginEnd="@dimen/dp20"
                    android:maxLength="50"
                    android:hint="@string/registered_name_of_business"

                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_trade_license_number"
                    style="@style/WhiteRoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp12"
                    android:maxLength="50"
                    android:layout_marginEnd="@dimen/dp20"
                    android:hint="@string/trade_license_number" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_license_issue_authority"
                    style="@style/WhiteRoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp12"
                    android:maxLength="50"
                    android:layout_marginEnd="@dimen/dp20"
                    android:hint="@string/trade_license_authority" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_service_description"
                    style="@style/WhiteRoundTextField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp100"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp12"
                    android:layout_marginEnd="@dimen/dp20"
                    android:gravity="top"
                    android:maxLength="250"
                    android:hint="@string/service_description"
                    android:paddingTop="@dimen/dp12" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/BlueRoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginStart="@dimen/dp24"
        android:onClick="onClick"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="@+id/iv_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>