<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.convertEmcashTocash.ConvertEmcashToCashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="@dimen/dp48"
            android:layout_height="@dimen/dp48"
            android:layout_marginLeft="@dimen/dp16"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:src="@drawable/ic_back_arrow" />
        </LinearLayout>
        <TextView
            style="@style/HeadingText"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="@dimen/sp16"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/convert_emcash_to_cash"
            android:textSize="@dimen/sp16"
            />

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/white"

            >
            <EditText
                android:id="@+id/et_emcash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="00"
                android:textColor="@color/black"
                android:textSize="@dimen/dp48"
                android:textAlignment="center"
                android:maxLength="2"
                android:inputType="number"
                android:background="@null"
                android:fontFamily="@font/biennale_bold"
                android:layout_marginTop="@dimen/dp80"
                android:cursorVisible="false"
                />
            <TextView
                style="@style/HeadingText"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp2"
                android:fontFamily="@font/biennale_bold"
                android:layout_height="wrap_content"
                android:text="@string/emcash"
                android:textSize="@dimen/sp16"
                />

            <EditText
                android:id="@+id/et_enter_ibn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                style="@style/GreyRoundTextField"
                android:hint="@string/enter_iban"
                android:textSize="@dimen/sp14"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginRight="@dimen/dp32"
                android:layout_marginTop="@dimen/dp20"
                android:cursorVisible="false"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:background="@drawable/blueshaded_round_bg"
                android:layout_marginTop="@dimen/dp48"
                android:layout_marginBottom="@dimen/dp12"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp2"
                    android:layout_height="wrap_content"
                    android:text="@string/aed_equals_emcash"
                    android:fontFamily="@font/biennale_medium"
                    android:textColor="@color/app_blue"
                    android:textSize="@dimen/sp12"
                    android:layout_margin="@dimen/dp6"
                    android:paddingBottom="@dimen/dp8"
                    android:paddingStart="@dimen/dp32"
                    android:paddingEnd="@dimen/dp32"
                    />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_convert"
                style="@style/BlueRoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                android:layout_marginTop="@dimen/dp48"
                android:layout_marginBottom="@dimen/dp30"
                android:paddingLeft="@dimen/dp80"
                android:paddingRight="@dimen/dp80"
                android:onClick="onClick"
                android:text="@string/convert" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>